feat: add API to export & import
