# openapi/Portal_swagger.json
@@ -236,8 +236,8 @@
                 ],
                 "parameters": [
                     {
-                        "description": "credentials properties",
-                        "name": "props",
+                        "description": "credentials payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -319,8 +319,8 @@
                         "required": true
                     },
                     {
-                        "description": "credentials properties",
-                        "name": "props",
+                        "description": "credentials payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -366,8 +366,8 @@
                         "required": true
                     },
                     {
-                        "description": "credentials properties",
-                        "name": "props",
+                        "description": "credentials payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -508,8 +508,8 @@
                 ],
                 "parameters": [
                     {
-                        "description": "credentials properties",
-                        "name": "props",
+                        "description": "credentials payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -585,8 +585,8 @@
                         "required": true
                     },
                     {
-                        "description": "credentials properties",
-                        "name": "props",
+                        "description": "credentials payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -634,6 +634,48 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/WorkspaceExportRes"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/gateway.Error"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "tags": [
+                    "workspace"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "workspace id",
+                        "name": "ws_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "import payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/WorkspaceImportReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/WorkspaceImportRes"
                         }
                     },
                     "default": {
@@ -1122,7 +1164,7 @@
                 "application": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/rest.WorkspaceSnapshotApp"
+                        "$ref": "#/definitions/WorkspaceSnapshotApp"
                     }
                 },
                 "name": {
@@ -1155,6 +1197,105 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "integer"
+                }
+            }
+        },
+        "WorkspaceImportReq": {
+            "type": "object",
+            "properties": {
+                "snapshot": {
+                    "$ref": "#/definitions/WorkspaceSnapshot"
+                }
+            }
+        },
+        "WorkspaceImportRes": {
+            "type": "object",
+            "properties": {
+                "app_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "ep_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "epr_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "WorkspaceSnapshot": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/WorkspaceSnapshotApp"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "WorkspaceSnapshotApp": {
+            "type": "object",
+            "properties": {
+                "endpoints": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/WorkspaceSnapshotEp"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "WorkspaceSnapshotEp": {
+            "type": "object",
+            "properties": {
+                "method": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rules": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/WorkspaceSnapshotEpr"
+                    }
+                },
+                "uri": {
+                    "type": "string"
+                }
+            }
+        },
+        "WorkspaceSnapshotEpr": {
+            "type": "object",
+            "properties": {
+                "condition_expression": {
+                    "type": "string"
+                },
+                "condition_source": {
+                    "type": "string"
+                },
+                "exclusionary": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "priority": {
                     "type": "integer"
                 }
             }
@@ -1230,60 +1371,6 @@
                 },
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "rest.WorkspaceSnapshotApp": {
-            "type": "object",
-            "properties": {
-                "endpoints": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/rest.WorkspaceSnapshotEp"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "rest.WorkspaceSnapshotEp": {
-            "type": "object",
-            "properties": {
-                "method": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "rules": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/rest.WorkspaceSnapshotEpr"
-                    }
-                },
-                "uri": {
-                    "type": "string"
-                }
-            }
-        },
-        "rest.WorkspaceSnapshotEpr": {
-            "type": "object",
-            "properties": {
-                "condition_expression": {
-                    "type": "string"
-                },
-                "condition_source": {
-                    "type": "string"
-                },
-                "exclusionary": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "priority": {
-                    "type": "integer"
                 }
             }
         }
